[gd_scene load_steps=3 format=3 uid="uid://c55yjvrwxj82d"]

[ext_resource type="Theme" uid="uid://b66pwk66dh8td" path="res://addons/noded/noded_theme.tres" id="1_0xeo4"]
[ext_resource type="Script" path="res://addons/noded/items_management/items_management.gd" id="1_2g1eh"]

[node name="Items" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_0xeo4")
script = ExtResource("1_2g1eh")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBox"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBox/Header"]
layout_mode = 2
text = "Items Folder -> "

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/HBox/Header"]
layout_mode = 2
theme_type_variation = &"IndentPanel"

[node name="PathLabel" type="Label" parent="PanelContainer/MarginContainer/HBox/Header/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
text = "res://items/"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItmsFolderButton" type="Button" parent="PanelContainer/MarginContainer/HBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Change"

[node name="RefreshItemsButton" type="Button" parent="PanelContainer/MarginContainer/HBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Refresh"

[node name="ItemsFoldersPick" type="FileDialog" parent="PanelContainer/MarginContainer/HBox/Header"]
unique_name_in_owner = true
title = "Open a Directory"
initial_position = 4
size = Vector2i(512, 512)
ok_button_text = "Select Current Folder"
file_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/MarginContainer/HBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/HBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"IndentPanel"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBox/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/HBox/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemsDisplaysRoot" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBox/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreateNewItmBtn" type="Button" parent="PanelContainer/MarginContainer/HBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Create New Item"

[connection signal="pressed" from="PanelContainer/MarginContainer/HBox/Header/ItmsFolderButton" to="." method="_on_itms_folder_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBox/Header/RefreshItemsButton" to="." method="_on_refresh_items_button_pressed"]
[connection signal="dir_selected" from="PanelContainer/MarginContainer/HBox/Header/ItemsFoldersPick" to="." method="_on_file_dialog_dir_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBox/VBoxContainer/CreateNewItmBtn" to="." method="_on_create_new_itm_btn_pressed"]
